fixing alignment of placeholder/empty lines in the cart table

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -59,7 +59,7 @@ label {
 	}
 	th, td {
 		vertical-align: middle;
-		&:last-child {
+		&:not([colspan]):last-child {
 			text-align: right;
 		}
 	}
